# cogniText

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml
