[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for CogniText"
authors = ["zmusaddique <musaddique092@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
